tests/machine/x/cpp/in_operator_extended.error
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp:11:26: error: ‘x’ was not declared in this scope; did you mean ‘xs’?
   11 |     std::vector<decltype(x)> __items;
      |                          ^
      |                          xs
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp:11:28: error: template argument 1 is invalid
   11 |     std::vector<decltype(x)> __items;
      |                            ^
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp:11:28: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp:15:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   15 |       __items.push_back(x);
      |               ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp:19:30: error: request for member ‘begin’ in ‘ys’, which is of non-class type ‘int’
   19 |   std::cout << (std::find(ys.begin(), ys.end(), 1) != ys.end()) << std::endl;
      |                              ^~~~~
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp:19:42: error: request for member ‘end’ in ‘ys’, which is of non-class type ‘int’
   19 |   std::cout << (std::find(ys.begin(), ys.end(), 1) != ys.end()) << std::endl;
      |                                          ^~~
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp:19:58: error: request for member ‘end’ in ‘ys’, which is of non-class type ‘int’
   19 |   std::cout << (std::find(ys.begin(), ys.end(), 1) != ys.end()) << std::endl;
      |                                                          ^~~
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp:20:30: error: request for member ‘begin’ in ‘ys’, which is of non-class type ‘int’
   20 |   std::cout << (std::find(ys.begin(), ys.end(), 2) != ys.end()) << std::endl;
      |                              ^~~~~
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp:20:42: error: request for member ‘end’ in ‘ys’, which is of non-class type ‘int’
   20 |   std::cout << (std::find(ys.begin(), ys.end(), 2) != ys.end()) << std::endl;
      |                                          ^~~
/workspace/mochi/tests/machine/x/cpp/in_operator_extended.cpp:20:58: error: request for member ‘end’ in ‘ys’, which is of non-class type ‘int’
   20 |   std::cout << (std::find(ys.begin(), ys.end(), 2) != ys.end()) << std::endl;
      |                                                          ^~~
